# fcitx5-unikey

./: AGENTS.md  CLAUDE.md  CMakeLists.txt  GEMINI.md  firefox-surrounding-text.md
scripts/: ctest-2pass  ctest_2pass.py  ctest_2pass.sh  test.sh
src/: CMakeLists.txt  unikey-config.h  unikey-constants.h  unikey-im.cpp  unikey-im.h  unikey-log.h  unikey-state.cpp  unikey-state.h  unikey-surrounding-text.cpp  unikey-utils.cpp  unikey-utils.h
test/: CMakeLists.txt  testfirefox.cpp  testinternalstate.cpp  testkeyhandling.cpp  testsurroundingtext.cpp  testunikey.cpp
unikey/: unikeyinputcontext.cpp
